# Bezier-Tessellation

./: .gitignore  CMakeLists.txt  README.md  hw2.docx  main.cpp
bezier/: bezier.cpp  bezier.h
config/: config.cpp  config.h
env/include/GL/: freeglut_std.h
model/: model.cpp  model.h
shader/: loader.py  model.frag  model.geom  model.tesc  model.tese  model.vert  shader.cpp  shader.h  shaderBuf.h  simple.frag  simple.vert
sourcesLoader/: sourcesLoader.cpp  sourcesLoader.h
texture/: texture.cpp  texture.h
view/: view.cpp  view.h
